# CMake-mac-travis-MCVE

./: .travis.yml  CMakeLists.txt  FindMPIDebug.cmake  README.md  test-script.cmake.sh  test.cxx
